# axp7_esp32p4_slint_eval

./: CMakeLists.txt  mem.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  slint-hello-world.cpp
main/ui/: app-window.slint  axp7_window.slint  button-status.slint  cleaning.slint  home.slint  shmi-utility-window.slint  wpd-slider.slint  wpd.slint
main/ui/images/output/: air_quality_bg.c
